[package]
name = "pythagore"
version = "0.8.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Jujulego/pythagore"
categories = ["mathematics", "wasm"]
keywords = ["maths", "geometry", "wasm"]
description = "Mathematics tools for simple geometry"

[lib]
crate-type = ["lib", "cdylib"]

[features]
wasm = ["wasm-point", "wasm-vector"]

wasm-point = ["wasm-point-int", "wasm-point-real"]
wasm-point-int = ["dep:wasm-bindgen"]
wasm-point-real = ["dep:wasm-bindgen"]

wasm-vector = ["wasm-vector-int", "wasm-vector-real"]
wasm-vector-real = ["dep:wasm-bindgen"]
wasm-vector-int = ["dep:wasm-bindgen"]

[dependencies]
nalgebra = "0.32.3"
num-traits = "0.2.15"
wasm-bindgen = { version = "0.2.87", optional = true }
