[package]
name = "pythagore-wasm"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Jujulego/pythagore"
categories = ["wasm"]
keywords = ["maths", "wasm"]
description = "WebAssembly pythagore bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pythagore = { path = "../pythagore", version = "0.2.1" }
wasm-bindgen = "0.2.86"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"