[package]
name = "pythagore"
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Jujulego/pythagore"
categories = ["mathematics"]
keywords = ["maths", "geometry"]
description = "Mathematics tools for simple geometry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra = "0.32.2"
