[package]
name = "pythagore"
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Jujulego/pythagore"
categories = ["mathematics", "wasm"]
keywords = ["maths", "geometry", "wasm"]
description = "Mathematics tools for simple geometry"

[features]
wasm = ["dep:wasm-bindgen"]
wasm-point = ["wasm"]

[dependencies]
nalgebra = "0.32.2"
wasm-bindgen = { version = "0.2.87", optional = true }
